--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"serve": "vite preview"
+		"serve": "vite preview",
+		"deploy": "pnpm build && gh-pages -d dist"
 	},
 	"devDependencies": {
 		"@types/three": "^0.134.0",
@@ -13,6 +14,7 @@
 	},
 	"dependencies": {
 		"@types/suncalc": "^1.8.1",
+		"gh-pages": "^4.0.0",
 		"lil-gui": "^0.17.0",
 		"suncalc": "^1.9.0",
 		"three": "^0.134.0"
